--- a/trunk/ressourcen/jd/languages/Italiano.lng
+++ b/trunk/ressourcen/jd/languages/Italiano.lng
@@ -11,7 +11,7 @@ addons.schedule.menu.edit = Modifica
 addons.schedule.menu.finished = Fine
 addons.schedule.menu.maxdl = Download Max.
 addons.schedule.menu.maxspeed = Velocità download
-addons.schedule.menu.p_time = Seleziona un tempo nel futuro!
+addons.schedule.menu.p_time = Seleziona un tempo
 addons.schedule.menu.reconnect = Ricconnetti
 addons.schedule.menu.redo = Azzera in [ore]
 addons.schedule.menu.remain = Rimasto:
@@ -51,13 +51,13 @@ download.connection.normal = Download
 download.error.message.connectioncopyerror = Impossibile clonare la connessione
 download.error.message.incomplete = Download Incompleto
 download.error.message.iopermissions = Nessun permesso di scrittura su disco fisso
-download.error.message.outofmemory = Il sistema di download non ha memoria suffciiente
+download.error.message.outofmemory = Il sistema di download non ha memoria sufficiente
 download.error.message.rangeheaderparseerror = Formato non previsto intervallo header:
 download.error.message.rangeheaders = Il servere non supporta la gestioen dei segmenti
 download.error.message.unavailable = Servizio temporaneamente non disponibile
 downloadlink.status.error.agb_not_signed = TOS non firmato
 downloadlink.status.error.captcha_wrong = Errore Captcha
-downloadlink.status.error.download_limit = Raggiunti limiti Download
+downloadlink.status.error.download_limit = Raggiunto limite di download
 downloadlink.status.error.downloadfailed = Download fallito
 downloadlink.status.error.fatal = Errore critico
 downloadlink.status.error.file_exists = File già esistente
@@ -154,12 +154,12 @@ gui.config.general.webupdate.auto = Aggiornamento web: avvia automaticamente!
 gui.config.general.webupdate.disable = Aggiorna solo su richiesta utente
 gui.config.gui.autopackagelimit = Soglia per creazione automatica del pacchetto
 gui.config.gui.browser = Browser
-gui.config.gui.container.tab = Link downlaod
+gui.config.gui.container.tab = Link download
 gui.config.gui.disabledialogs = Disabilita finestre di conferma
 gui.config.gui.extended = Impostazioni avanzate
 gui.config.gui.language = Lingua
 gui.config.gui.linkgrabber.onlinecheck = Cattura link: stato link (disponibile)
-gui.config.gui.look.tab = Impostazioni aspetto grafico
+gui.config.gui.look.tab = Impostazioni interfaccia grafica
 gui.config.gui.plaf = Stile (richiede riavvio)
 gui.config.gui.showsplash = Mostra schermata iniziale all'avvio del programma
 gui.config.gui.soundtheme = Combinazione suoni
@@ -185,7 +185,7 @@ gui.config.liveheader.warning.notfound = jDownloader non rileva le impostazioni 
 gui.config.liveheader.warning.wizard = L'impostazione di ricerca può richiedere un po' di tempo. Digitate i dati di accesso al vostro router. Eseguo ora?
 gui.config.liveheader.warning.wizard.checkall = Verifica tutti i router (molto lento)
 gui.config.liveheader.warning.wizard.title = Avvia ora rilevazione automatica router?
-gui.config.liveheader.warning.yourrouter = Hai un
+gui.config.liveheader.warning.yourrouter = Hai un 
 gui.config.localeditmode = Crea un file con le traduzioni mancanti
 gui.config.packagemanager.column_category = Categoria
 gui.config.packagemanager.column_info = Informazioni
@@ -250,9 +250,9 @@ gui.dialogs.agb_tos.readagb = Lettura TOC %s
 gui.dialogs.agb_tos.title = Termini del servizio
 gui.dialogs.helpdialog.btn.help = Guida in linea
 gui.dialogs.helpdialog.btn.stoptimer = Ferma timer
-gui.dialogs.helpdialog.defaulttitle = jDownloader Soforthilfe
+gui.dialogs.helpdialog.defaulttitle = jDownloader Help
 gui.dialogs.progress.title = Attendere...
-gui.download.create_connection = Connessione....
+gui.download.create_connection = Connessione...
 gui.download.filesize_unknown = (Dim. file sconosciuta)
 gui.download.onlinecheckfailed = [Non disponibile]
 gui.download.waittime_status = Attendere %s min
@@ -302,12 +302,12 @@ gui.linkgrabber.menu.extras.autopackage = Pacchetti automatici
 gui.linkgrabber.menu.hostselection = Selezione server
 gui.linkgrabber.menu.hostselectionmore = Altri server
 gui.linkgrabber.menu.hostselectionpackageonly = Solo pacchetto corrente
-gui.linkgrabber.menu.hostselectionremove = Rimuovi collegamenti riimanenti
+gui.linkgrabber.menu.hostselectionremove = Rimuovi collegamenti rimanenti
 gui.linkgrabber.menu.selection = Selezione
 gui.linkgrabber.menu.selection.free = Liberi
 gui.linkgrabber.menu.selection.mirror = Server alternativo
 gui.linkgrabber.menu.selection.premium = Premium
-gui.linkgrabber.menu.selection.priority = Priorità 
+gui.linkgrabber.menu.selection.priority = Priorità
 gui.linkgrabber.packagetab.chb.extractafterdownload = Estrai
 gui.linkgrabber.packagetab.lbl.comment = Commento
 gui.linkgrabber.packagetab.lbl.name = Nome pacchetto
@@ -321,8 +321,8 @@ gui.linkgrabber.packagetab.table.column.size = Dimensione
 gui.linkgrabber.packagetab.table.context.delete = Rimuovi
 gui.linkgrabber.packagetab.table.context.newpackage = Nuovo pacchetto
 gui.linkgrabber.password = Password archivio:
-gui.linkgrabber.pos.bottom = GiÑ
-gui.linkgrabber.pos.top = SÑ
+gui.linkgrabber.pos.bottom = Giù
+gui.linkgrabber.pos.top = Sù
 gui.linkgrabber.tabs.context.acceptselection = Accetta selezione
 gui.linkgrabber.tabs.context.delete = Rimuovi
 gui.linkgrabber.tabs.context.deleteothers = Rimuovi tutti gli altri
@@ -351,7 +351,7 @@ gui.linklist.editpackagename.message = Nuovo nome pacchetto
 gui.linklist.newpackage.message = Nome del nuovo pacchetto
 gui.linklist.status.doresume = Attendere per il recupero
 gui.logdialog.btn_uploadlog = Log di invio
-gui.logdialog.loglink = Log collegamenti (selezionare OK epr aprire)
+gui.logdialog.loglink = Log collegamenti (selezionare OK per aprire)
 gui.logdialog.title = Log jDownloader
 gui.logdialog.warning.uploadfailed = Invio fallito
 gui.logdialog.yourlog = Log di invio: modifica possibile!
@@ -565,7 +565,7 @@ gui.treetable.parts = Parte(i)
 gui.warning.reconnect.close = Chiudi finestra
 gui.warning.reconnect.hasbeendisabled = Riconnessione disabilitata!
 gui.warning.reconnect.hasbeendisabled.tooltip = Per permettere a jDownloader di eseguire riconnessioni automatiche, abilitare questa funzione!
-gui.warning.reconnect.pleasewait = Attendere...riconnessione in corso
+gui.warning.reconnect.pleasewait = Attendere... Riconnessione in corso...
 gui.warning.reconnectfailed = Riconnessione fallita!
 gui.warning.reconnectfailedrunningdownloads = Fermare prima tutti i downlaod!
 gui.warning.reconnectsuccess = Riconnessione avvenuta!
@@ -629,7 +629,7 @@ interaction.resetlink.name = Resetta i link di download
 interaction.resetlink.options.all = Tutti i link
 interaction.resetlink.options.lastlink = Solo l'ultimo
 interaction.resetlink.whichlink = Quale link vuoi resettare?
-interaction.shutdown.dialog.msg = <h2><font color="red">Attenzione! Il sistema operativo si sta spegnendo</font></h2>
+interaction.shutdown.dialog.msg = <h2><font color="red">Attenzione! Il sistema si sta spegnendo...</font></h2>
 interaction.simpleexecute.cmd = Comando
 interaction.simpleexecute.executein = Esegui in (cartella)
 interaction.simpleexecute.extended = Impostazioni Avanzate
@@ -702,14 +702,14 @@ locale.lngs.swedish = Scedese
 main.start.logwarning.body = ATTENZIONE: Il log è impostato a %s e il salvataggio dei log è %s. Queste impostazioni sono raccomandate solo in caso di problemi.
 main.start.logwarning.title = Log avvisi
 main.status.active = on
-main.status.inactive = no
+main.status.inactive = off
 main.urls.faq = http://wiki.jdownloader.org/index.php?title=jDownloader_Wiki:Portal_English
 modules.container.dlc.containerinfo = <div style="width:450px;font-family:Geneva, Arial, Helvetica, sans-serif; font-size: 9px;"><font color="#0066FF"><strong>DLContainer caricato correttamente.</strong></font><br/><hr/><table style="width:450px"><tr><td>Creato da </td><td>%s</td></tr><tr><td>Creato con </td><td>%s</td></tr><tr><td>Pacchetti </td><td>%s</td></tr><tr><td>Categorie </td><td>%s</td></tr><tr ><td colspan="2">%s</td></tr></table></div>
 modules.container.dlc.loadedmessage = Caricato DownloadLinkContainer
-modules.packagemanager.downloadednewpackage.title2 = <p>Aggiornamenti caricati. E' necessario riavviare JD.<br/> RIAVVIARE ORA?<hr>%s</p>
+modules.packagemanager.downloadednewpackage.title2 = <p>Aggiornamenti caricati. E' necessario riavviare jDownloader.<br/> RIAVVIARE ORA?<hr>%s</p>
 modules.packagemanager.loadednewpackage.more = Maggiori informazioni & note di installazione
 modules.packagemanager.loadednewpackage.title = Installato pacchetto aggiornato
-modules.packagemanager.packagename = JD-Aggiornamento
+modules.packagemanager.packagename = Aggiornamento
 modules.reconnect.pleaseselect = Metodo:
 modules.reconnect.testreconnect = Test riconnessione
 modules.reconnect.types.batch = Gruppo
@@ -717,7 +717,7 @@ modules.reconnect.types.extern = Esterno
 modules.reconnect.types.liveheader = LiveHeader/Curl
 modules.unrar.enabled.instanthelp = http://ns2.km32221.keymachine.de/jdownloader/web/page.php?id=17
 plugin.optional.jdchat.teamviewer.yourtvdata = Utente Teamviewer:
-plugin.rapidshare.tickettime = Attendi %s min. per partire
+plugin.rapidshare.tickettime = Attendi %s min.
 plugin.serienjunkies.archiveincomplete = Archivio non completo o non in linea
 plugin.serienjunkies.pageerror = Nessun link da SJ
 plugin.system.notloaded = In attesa
@@ -751,7 +751,7 @@ plugins.decrypt.serienjunkies.usepremiumlinks = Usa se possibile collegamenti Pr
 plugins.decrypt.speedysharecom.password = Inserire Password:
 plugins.decrypt.stealthto.captcha = Selezionare il cerchio con uno spazio
 plugins.error.downloadfailed = Download fallito
-plugins.errors.error = Errore:
+plugins.errors.error = Errore: 
 plugins.errors.pluginerror = Errore plugin. Informare il supporto.
 plugins.errors.uploadedto.premiumtrafficreached = Raggiunto limite traffico
 plugins.errors.wrongpassword = Password errata
@@ -771,8 +771,8 @@ plugins.host.premium.info.usedspace = Spazio usato
 plugins.host.premium.info.validuntil = Valido fino al
 plugins.host.rapidshare.errors.0b37866ecbc00ce1857fa40852df6fef = Sessione scaduta. Riprova.
 plugins.host.rapidshare.errors.33f66fa600e57edd85714127295c7bcc = File non trovato. Controlla il link.
-plugins.host.rapidshare.errors.811d7f115500de90d1495ef963040930 = Il server dove è memorizzato il file è spento. Riprova piÑ tardi!
-plugins.host.rapidshare.errors.bcfe246b0634299062224a73ae50f17e = Questo file sembra illegale ed è stato bloccato. Scaricare questo file è proibito da Rapidshare!
+plugins.host.rapidshare.errors.811d7f115500de90d1495ef963040930 = Il server dove è memorizzato il file è spento. Riprova più tardi!
+plugins.host.rapidshare.errors.bcfe246b0634299062224a73ae50f17e = Questo file è stato segnalato come illegale. Rapidshare ne ha proibito il download.
 plugins.host.rapidshare.errors.d11f499020a3607ffdf987ce3968c692 = Raggiunto limite di 10 GB.
 plugins.host.server.unavailable = Errore server
 plugins.hoster.error.agb = TOC non firmata
