--- a/trunk/ressourcen/jd/languages/Turkish.lng
+++ b/trunk/ressourcen/jd/languages/Turkish.lng
@@ -50,7 +50,7 @@ decrypter.unknownerror = Bilinmeyen hata
 decrypter.wrongcaptcha = Yanlış captcha kodu
 decrypter.wrongpassword = Yanlış Parola
 download.chunks.connection = Bağlantı
-download.chunks.label = Parçalar
+download.chunks.label = Dosya bağlantı sayısı
 download.connection.idle = boşta
 download.connection.normal = İndir
 download.error.message.connectioncopyerror = Bağlantı klonlanamadı
@@ -59,7 +59,7 @@ download.error.message.iopermissions = Sabit diske yazma yetkisi yok.
 download.error.message.localio = Bu konuma yazdırılamadı: %s
 download.error.message.outofmemory = İndirme sisteminde yetersiz bellek!
 download.error.message.rangeheaderparseerror = Beklenmedik hata (rangeheader)
-download.error.message.rangeheaders = sunucu parça yüklemeyi desteklemiyor
+download.error.message.rangeheaders = Sunucu parça yüklemeyi desteklemiyor
 download.error.message.unavailable = Servis geçici olarak mevcut değil
 download.system.waitForconnection = şu an. %s/%s bağlantı...bekliyor
 downloadlink.status.error.agb_not_signed = TOS imzalanmadı!
@@ -118,24 +118,24 @@ gui.config.captcha.train.show_timeout = Captcha penceresi geri sayım (san)
 gui.config.clr.script = CLR Script
 gui.config.download.autoresume = Tekrar bağlan sürdürebilen indirmeleri kesebilsin
 gui.config.download.buffersize = Mak. ArabellekBoyutu[MB]
-gui.config.download.chunks = Parça/Download sayısı
+gui.config.download.chunks = Dosya / bağlantı sayısı (parçayükleme)
 gui.config.download.connectionlost.wait = Bağlantı kaybında bekleme süresi [san]
 gui.config.download.crc = SFV/CRC mümkün olduğunda kontrol et
-gui.config.download.download.tab = İndirme ayarları
+gui.config.download.download.tab = İndirme Ayarları
 gui.config.download.downloadThread = Download sırasında sabit diske yaz
 gui.config.download.ipcheck.disable = IP kontrolünü devre dışı bırak
 gui.config.download.ipcheck.externalinterval = Harici IP kontrol aralığı [san]
 gui.config.download.ipcheck.mask = İzin verilen IP'ler
 gui.config.download.ipcheck.regex = IP Filtre RegEx
 gui.config.download.ipcheck.website = IP online kontrolü
-gui.config.download.network.extended = Gelişmiş ayarlar
+gui.config.download.network.extended = Gelişmiş Ayarlar
 gui.config.download.network.tab = İnternet & Ağ
 gui.config.download.proxy.host = Host/IP
 gui.config.download.proxy.pass = Parola (opsiyonel)
 gui.config.download.proxy.port = Port
 gui.config.download.proxy.user = Kullanıcı adı (opsiyonel)
 gui.config.download.retries = Geçici barındırıcı problemlerinde Mak. deneme sayısı
-gui.config.download.simultan_downloads = Aynı anda Mak. indirme sayısı
+gui.config.download.simultan_downloads = Aynı anda Mak.İndirme sayısı
 gui.config.download.socks.host = Host/IP
 gui.config.download.socks.port = Port
 gui.config.download.startDownloadsOnStartUp = İndirmeler uygulama başlangıcı ile beraber başlasın
@@ -465,7 +465,7 @@ gui.menu.action.exit.desc = jDownloader çıkış
 gui.menu.action.exit.mnem = B
 gui.menu.action.exit.name = Çıkış
 gui.menu.action.help.accel = CTRL+9
-gui.menu.action.help.desc = Yardım ve Destek merkezi
+gui.menu.action.help.desc = Yardım ve Destek
 gui.menu.action.help.mnem = s
 gui.menu.action.help.name = Destek
 gui.menu.action.install.accel = CTRL+I
@@ -568,8 +568,8 @@ gui.splash.text.loadPlugins = Takma Birimler Yükleniyor
 gui.splash.text.update = Güncelleştirmeler Kontrol Ediliyor
 gui.splash.text.webupdate = Güncellemeler Kontrol Ediliyor
 gui.statusbar.premium = Premium
-gui.statusbar.sim_ownloads = Mak.İnd.
-gui.statusbar.speed = Mak. Hız
+gui.statusbar.sim_ownloads = Mak.İnd
+gui.statusbar.speed = Mak.Hız
 gui.support.forumurl = http://www.the-lounge.org/viewforum.php?f=291
 gui.support.wikiurl = http://wiki.jdownloader.org/index.php?title=JDownloader_Wiki:Portal_English
 gui.tab.plugin_activity.column_plugin = Modül
@@ -608,7 +608,7 @@ gui.textcomponent.context.paste.acc = ctrl V
 gui.textcomponent.context.selectall = Tümünü seç
 gui.textcomponent.context.selectall.acc = ctrl A
 gui.tooltip.statusbar.premium = Premium İndirmeler Açık/Kapalı
-gui.tooltip.statusbar.simultan_downloads = Aynı anda Mak. indirme sayısı
+gui.tooltip.statusbar.simultan_downloads = Aynı anda Mak.İndirme sayısı
 gui.tooltip.statusbar.speedlimiter = İndirme hız Limiti (kb/s) [0:limitsiz]
 gui.treetable.header_1.tree = Paketler
 gui.treetable.header_2.files = Dosyalar
