--- a/trunk/ressourcen/jd/languages/Polski.lng
+++ b/trunk/ressourcen/jd/languages/Polski.lng
@@ -266,9 +266,14 @@ gui.config.fengshui.fritzbox.title = Wykryto Fritz!Box
 gui.config.fengshui.fritzbox.upnp.checkbox = Komunikacja niedostępna
 gui.config.fengshui.fritzbox.upnpactive = Posiadasz Fritz!Box. Istnieje możliwość nawiązywania ponownego połączenia przez UPnP. Czy chcesz użyć tej funkcji?
 gui.config.fengshui.fritzbox.upnpinactive = Proszę aktywować UPnP w Fritz!Boxie <br><a href=\"http://%s\">do Fritz!Box</a><br><a href=\"http://wiki.jdownloader.org/index.php?title=Fritz!Box_Upnp\">Artykuł: Fritz!Box UPnP</a>
+gui.config.fengshui.title = Konfiguracja FengShui
 gui.config.fengshui.password = Hasło:
+gui.config.fengshui.rdautomatic = Automatyczne
+gui.config.fengshui.rdmanual = Ręczne
+gui.config.fengshui.rdname = Wykrywanie routera
 gui.config.fengshui.routerip = IP Routera:
 gui.config.fengshui.routername = Nazwa:
+gui.config.fengshui.settings = Ustawienia
 gui.config.fengshui.user = Użytkownik:
 gui.config.general.browser = Przeglądarka WWW
 gui.config.general.clipboardobserver = Obserwuj zawsze Schowek
@@ -316,6 +321,7 @@ gui.config.gui.custum_browser = Ścieżka do przeglądarki
 gui.config.gui.custum_browser_param = Parametr %url (jeden parametr na linię)
 gui.config.gui.disabledialogs = Wyłącz potwierdzenia
 gui.config.gui.disabletooltipps = Wyłącz podpowiedzi z listy pobrań
+gui.config.gui.ext = Zaawansowane
 gui.config.gui.extended = Zaawansowane
 gui.config.gui.gui = Połączenia użytkownika
 gui.config.gui.langeditmode = Tryb edycji pliku językowego
@@ -323,8 +329,9 @@ gui.config.gui.language = Język
 gui.config.gui.languagefileinfo = Bieżący plik tłumaczenia: %s , przetłumaczony przez %s w wersji %s
 gui.config.gui.linkgrabber.onlinecheck = Przechwytywanie linków: Stan linku (dostępny)
 gui.config.gui.localehelp = Tak, chciałbym jD poprzez poprawienie polonizacji!
-gui.config.gui.look.tab = Ustawienia glówne
+gui.config.gui.look.tab = Ustawienia główne
 gui.config.gui.plaf = Styl (Po zmianie uruchom ponownie)
+gui.config.gui.premiumconfigfilednum = Ilość wyświetlanych pól kont Premium
 gui.config.gui.showfengshui = Zawsze otwieraj zaawansowaną konfigurację.
 gui.config.gui.showsplash = Pokazuj ekran uruchamiania programu
 gui.config.gui.soundtheme = Schemat dźwięków
@@ -598,7 +605,7 @@ gui.fengshuiconfig.languages.restartwarning = Musisz zrestartować jDownloader, 
 gui.fengshuiconfig.plugin.host.tooltip = <html>Jeśli posiadasz konto Premium w jakimś serwisie, możesz wpisać swów login<br> i hasło tutaj by móc automatycznie z niego korzystać przy pobieraniu z tego serwisu.
 gui.fengshuiconfig.reconnect.tooltip = <html>Czasem możesz potrzebować zmienić swój adres IP poprzez zresetowanie połaczenia z internetem, by ominąć czas oczekiwania!
 gui.fengshuiconfig.routerip = IP routera
-gui.fengshuiconfig.routername = Nazwa routera
+gui.fengshuiconfig.routername = Router
 gui.fengshuiconfig.routerpassword = Hasło
 gui.fengshuiconfig.testsettings = Test ustawień
 gui.fengshuiconfig.username = Nazwa użytkownika
@@ -1481,6 +1488,7 @@ plugins.optional.langfileeditor.clearallvalues = Wyczyść wszystkie wartości
 plugins.optional.langfileeditor.clearvalues = Wyczyść wartość(i)
 plugins.optional.langfileeditor.close = Zamknij
 plugins.optional.langfileeditor.colorize = Kolorowanie
+plugins.optional.langfileeditor.colorizedone = Koloruj zrobione wpisy
 plugins.optional.langfileeditor.colorizemissing = Koloruj brakujące wpisy
 plugins.optional.langfileeditor.colorizeold = Koloruj stare wpisy
 plugins.optional.langfileeditor.continuesearch = Szukaj następny
@@ -1510,6 +1518,7 @@ plugins.optional.langfileeditor.name = Edytor tłumaczeń
 plugins.optional.langfileeditor.new = Nowy
 plugins.optional.langfileeditor.ok = OK
 plugins.optional.langfileeditor.patternentry = <Wpis pasuje do wzorca>
+plugins.optional.langfileeditor.pickdonecolor = Wybierz kolor dla zrobionych wpisów
 plugins.optional.langfileeditor.pickmissingcolor = Wybierz kolor dla brakujących wpisów
 plugins.optional.langfileeditor.pickoldcolor = Wybierz kolor dla starych wpisów
 plugins.optional.langfileeditor.reload = Przeładuj
